--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "license": "MIT",
     "dependencies": {
         "app-module-path": "^2.2.0",
-        "encoding-down": "^5.0.4",
         "nodemon": "^1.18.3",
-        "level": "^4.0.0"
+        "pouchdb-adapter-leveldb": "^7.0.0",
+        "rxdb": "^7.7.0",
+        "rxjs": "^6.2.2"
     }
 }
