--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "license": "MIT",
     "dependencies": {
         "app-module-path": "^2.2.0",
+        "browser-sync": "^2.24.4",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^5.0.0",
+        "gulp-clean-css": "^3.9.4",
+        "gulp-concat": "^2.6.1",
+        "gulp-notify": "^3.2.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^4.0.1",
+        "gulp-uglify": "^3.0.0",
         "nodemon": "^1.18.3",
         "pouchdb-adapter-leveldb": "^7.0.0",
         "rxdb": "^7.7.0",
