Исправлена ошибка в package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "Natalia Klimova (@Tataklim)",
         "Gleb Bakhmetyev (@sk8bored)",
         "Anton Rostocki (@AntonRostetskiy",
-        "Dmitry Rybakov (@bulletmys)",
+        "Dmitry Rybakov (@bulletmys)"
     ],
     "license": "MIT",
     "repository": {
